[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keyboard-jump"
version = "0.1.0"
description = "A fast-paced typing game built with Pygame."
authors = [{ name = "Mobin Yousefi", email = "" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pygame>=2.5",
]
keywords = ["pygame", "typing", "game", "education", "arcade"]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs/keyboard-jump"
Issues = "https://github.com/mobinyousefi-cs/keyboard-jump/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["keyboard_jump*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "I", "UP", "B", "PL", "W"]
ignore = ["E203", "E266", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
